# limen

./: CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FUNDING.md  LICENSE-APACHE  LIMEN_ARCHITECTURE.md  LIMEN_QUICKSTART_AND_TESTING.md  NOTICE  README.md  SECURITY.md  csv_to_stdout.toml  deny.toml  simulated_identity_stdout.toml
.github/workflows/: ci.yml  docs.yml
dev_utils/: run-local-ci.sh
docs/: dev_guide.md  index.md  limen_core_draft.md  quickstart.md  roadmap.md  whitepaper.md
docs/ADRs/: 001_WORKSPACE_STRUCTURE_CRATE_RESPONSIBILITIES.md  002_TRAIT_FIRST_ZERO_DYN_CONTRACTS.md  003_NO_STD_ALLOC_STD_UNSAFE_DIVISION.md  004_PAYLOAD_FIRST_CONTRACTS.md  005_MEMORY_MANAGER_EDGE_NODE_GRAPH_RUNTIME_RESPONSIBILITIES.md  006_MEMORY_MODEL_MANAGER_CONTRACT.md  007_EDGE_CONTRACT.md  008_NODE_CONTRACT.md  009_GRAPH_CONTRACT_CODEGEN.md  010_RUNTIME_CONTRACT.md  011_BATCH_SEMANTICS.md  012_ROBOTICS_READINESS.md  013_ZERO_LOCK_ZERO_COPY_CONCURRENT_GRAPHS.md
docs/architecture/: codegen.md  edge.md  graph.md  graph_flow_concurrent.md  graph_flow_no_std.md  index.md  memory_manager.md  message_payload.md  model.md  node.md  platform.md  policy.md  runtime.md  sink.md  source.md  telemetry.md
integration-tests/tests/: codegen_example_graph.rs  proc_example_graph.rs
integration-tests/tests/codegen_example_graph/: no_std.rs  std.rs
integration-tests/tests/proc_example_graph/: no_std.rs  std.rs
integration-tests/tests/static_example_graph/: std.rs
limen/: Cargo.toml
limen-build/: Cargo.toml
limen-build/src/: lib.rs
limen-codegen/: Cargo.toml
limen-codegen/src/: ast.rs  builder.rs  gen.rs  lib.rs  parse.rs  validate.rs
limen-core/: Cargo.toml
limen-core/src/: compute.rs  edge.rs  errors.rs  graph.rs  lib.rs  memory.rs  message.rs  node.rs  platform.rs  policy.rs  prelude.rs  queue.rs  routing.rs  runtime.rs  scheduling.rs  telemetry.rs  types.rs
limen-core/src/edge/: bench.rs  contract_tests.rs  link.rs  spsc_array.rs  spsc_concurrent.rs  spsc_priority2.rs  spsc_raw.rs  spsc_ringbuf.rs  spsc_vecdeque.rs
limen-core/src/graph/: bench.rs  builder.rs  descriptor.rs  validate.rs
limen-core/src/memory/: concurrent_manager.rs  header_store.rs  heap_manager.rs  manager.rs  static_manager.rs
limen-core/src/message/: batch.rs  payload.rs  tensor.rs
limen-core/src/node/: bench.rs  contract_tests.rs  descriptor.rs  link.rs  model.rs  routing.rs  sink.rs  source.rs
limen-core/src/platform/: linux.rs
limen-core/src/queue/: descriptor.rs  link.rs  spsc_array.rs  spsc_concurrent.rs  spsc_priority2.rs  spsc_raw.rs  spsc_ringbuf.rs  spsc_vecdeque.rs
limen-core/src/runtime/: bench.rs  tests.rs
limen-core/src/runtime/tests/: concurrent.rs  no_std.rs
limen-core/src/telemetry/: concurrent.rs  event_message.rs  graph_telemetry.rs  sink.rs
limen-core/src/traits/: configuration.rs  mod.rs  platform.rs
limen-devtools/: Cargo.toml
limen-devtools/src/: lib.rs  main.rs
limen-examples/: Cargo.toml  build.rs
limen-examples/examples/: simulated_identity_stdout.rs
limen-examples/src/: lib.rs  p2_sim_chain.rs
limen-examples/tests/: codegen_example_graph.rs  codegen_nonstd.rs  common.rs  proc_example_graph.rs  proc_nonstd.rs  proc_std.rs  static_example_graph.rs
limen-examples/tests/codegen_example_graph/: no_std.rs  std.rs
limen-examples/tests/proc_example_graph/: no_std.rs  std.rs
limen-examples/tests/static_example_graph/: no_std.rs  std.rs
limen-light/: Cargo.toml
limen-light/examples/: no_alloc_queued_stdout.rs
limen-light/src/: builder.rs  lib.rs  pipeline.rs  util.rs
limen-light/src/graph/: mod.rs  simple_chain.rs
limen-light/src/no_alloc/: mod.rs  runtime.rs  runtime_queued.rs  traits.rs  types.rs
limen-light/src/no_alloc/components/: mod.rs  model_identity.rs  post_identity.rs  pre_identity.rs  sensor_simulated.rs  sink_stdout.rs
limen-light/src/runtime/: mod.rs  p0.rs  p1.rs
limen-light/src/spsc/: heap_ring.rs  mod.rs  static_ring.rs
limen-models/: Cargo.toml
limen-models/src/: identity.rs  lib.rs  native_identity.rs  nodes.rs  onnxruntime_backend.rs  tract_backend.rs
limen-node/: Cargo.toml
limen-node/src/: lib.rs
limen-output/: Cargo.toml
limen-output/src/: file.rs  file_sink.rs  gpio_rpi_sink.rs  lib.rs  mqtt_paho_sink.rs  stdout.rs  stdout_sink.rs
limen-platform/: Cargo.toml
limen-platform/src/: desktop.rs  lib.rs  linux.rs
limen-processing/: Cargo.toml
limen-processing/src/: identity.rs  lib.rs  logic.rs  math.rs  ops.rs  payload.rs  util.rs
limen-processing/src/post/: debounce.rs  identity.rs  mod.rs  threshold.rs
limen-processing/src/pre/: identity.rs  mod.rs  normalize.rs  window.rs
limen-runtime/: Cargo.toml
limen-runtime/src/: lib.rs  runtime.rs  scheduler.rs
limen-runtime/src/runtime/: p2_concurrent.rs  p2_single.rs
limen-runtime/src/scheduler/: edf.rs  throughput.rs
limen-sensors/: Cargo.toml
limen-sensors/src/: csv.rs  csvio.rs  lib.rs  mqtt_paho_sensor.rs  serial_port.rs  simulated.rs
limen/src/: boxed.rs  builder.rs  config.rs  lib.rs  observability_init.rs  platform.rs  registry.rs
limen/src/graph/: mod.rs  simple_chain.rs
limen/src/runtime/: mod.rs  p2_concurrent.rs  p2_single.rs
limen/src/scheduler/: edf.rs  throughput.rs
limen/src/spsc/: lockfree_ring.rs  mod.rs  priority2.rs
