[workspace]
members = [
    "limen-core",
    "limen-codegen",
    "limen-build",
    "limen-node",
    "limen-runtime",
    "limen-platform",
    "limen-examples",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
authors = ["Arlo Louis Byrne (idky137) <arlo@umbriel-systems.com>"]
repository = "https://github.com/idky137/limen"
homepage = "https://github.com/idky137/limen"
documentation = "https://docs.rs/limen-core"
readme = "README.md"
keywords = ["embedded", "inference", "runtime", "no-std", "graph"]
categories = ["embedded", "no-std::no-alloc", "science::robotics"]

[workspace.dependencies]
# Internal crates
limen-core = { path = "limen-core", version = "0.1.0-alpha.1", default-features = false }
limen-codegen = { path = "limen-codegen", version = "0.1.0-alpha.1" }
limen-build = { path = "limen-build", version = "0.1.0-alpha.1" }
limen-node = { path = "limen-node", version = "0.1.0-alpha.1", default-features = false }
limen-runtime = { path = "limen-runtime", version = "0.1.0-alpha.1", default-features = false }
limen-platform = { path = "limen-platform", version = "0.1.0-alpha.1", default-features = false }

# Shared proc-macro/tooling deps
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2"
thiserror = "1"

# limen-core externals
heapless = { version = "0.8", default-features = false }
libc = { version = "0.2", default-features = false }
ringbuf = { version = "0.4.8" }
