[package]
name = "limen-build"
description = "Proc-macro wrapper for limen-codegen."
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
limen-codegen = { workspace = true }

proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
