[package]
name = "limen-codegen"
description = "Reusable code generator for Limen graphs (proc-macro and build.rs compatible)."
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
limen-core = { workspace = true }

proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
thiserror = { workspace = true }
