[package]
name = "limen-core"
description = "Limen core contracts and primitives."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
alloc = []
std = ["alloc", "dep:ringbuf", "checked-memory-manager-refs"]
spsc_raw = ["std"] # enables SpscAtomicRing (unsafe)

# Opt-in checked runtime borrow/ref checking for single-threaded managers.
checked-memory-manager-refs = []

# (Work)bench:
# - Enables test features and implementations for downstream crates.
bench = ["checked-memory-manager-refs"]

[dependencies]
heapless = { workspace = true }
ringbuf = { workspace = true, optional = true }
libc = { workspace = true }
