[package]
name = "limen-core"
description = "Limen core contracts and primitives."
version = "0.1.0-alpha.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/limen-core"
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
alloc = []
std = ["alloc", "dep:ringbuf", "checked-memory-manager-refs"]
spsc_raw = ["std"] # enables SpscAtomicRing (unsafe)

# Opt-in checked runtime borrow/ref checking for single-threaded managers.
checked-memory-manager-refs = []

# (Work)bench:
# - Enables test features and implementations for downstream crates.
bench = ["checked-memory-manager-refs"]

[dependencies]
heapless = { workspace = true }
ringbuf = { workspace = true, optional = true }
libc = { workspace = true }
