[package]
name = "limen-devtools"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Developer tools and utilities for the Limen edge inference runtime."
repository = "https://example.com/your/limen"

[features]
default = ["std"]
std = []
with-limen = ["dep:limen", "dep:limen-core", "dep:serde", "dep:toml"]
with-processing = ["dep:limen-processing"]
with-sensors = ["dep:limen-sensors"]
with-output = ["dep:limen-output"]
with-platform = ["dep:limen-platform"]
with-models = ["dep:limen-models"]
with-tract = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }

limen = { path = "../limen", default-features = false, optional = true, features = ["std", "serde", "toml", "tracing"] }
limen-core = { path = "../limen-core", default-features = false, optional = true, features = ["std", "serde"] }
limen-processing = { path = "../limen-processing", default-features = false, optional = true, features = ["std", "register"] }
limen-sensors = { path = "../limen-sensors", default-features = false, optional = true, features = ["std", "register"] }
limen-output = { path = "../limen-output", default-features = false, optional = true, features = ["std", "register", "stdout", "file"] }
limen-platform = { path = "../limen-platform", default-features = false, optional = true, features = ["std", "register"] }
limen-models = { path = "../limen-models", default-features = false, optional = true, features = ["std", "register", "native-identity"] }
