[package]
name = "limen-devtools"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Codegen and test utilities for Limen (POC)."
repository = "https://example.com/limen"

[features]
default = ["std"]
std = ["limen-core/std"]

[dependencies]
limen-core = { path = "../limen-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[lib]
name = "limen_devtools"
path = "src/lib.rs"

[[bin]]
name = "limen-codegen"
path = "src/bin/codegen.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
