[package]
name = "limen-examples"
description = "Limen examples and integration tests."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
alloc = ["limen-core/alloc"]
std = ["alloc", "limen-core/std"]

[dev-dependencies]
limen-core = { workspace = true }
limen-build = { workspace = true }

[build-dependencies]
limen-core = { workspace = true }
limen-codegen = { workspace = true }
syn = { workspace = true }
