[package]
name = "limen-examples"
description = "Limen examples and integration tests."
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
alloc = ["limen-core/alloc"]
std = ["alloc", "limen-core/std"]
spsc_raw = ["std", "limen-core/spsc_raw"]

[dev-dependencies]
limen-core = { workspace = true, features = ["bench"] }
limen-build = { workspace = true }

[build-dependencies]
limen-core = { workspace = true, features = ["bench"] }
limen-codegen = { workspace = true }
syn = { workspace = true }
