[package]
name = "limen-models"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Compute backends and model nodes for Limen (identity and Tract POC)."
repository = "https://example.com/limen"

[features]
default = ["std"]
std = ["limen-core/std"]
backend-tract = [] # POC feature, no deps wired yet (documentation to expand)

[dependencies]
limen-core = { path = "../limen-core" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
