[package]
name = "limen-node"
description = "Limen node implementations."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
alloc = ["limen-core/alloc"]
std = ["alloc", "limen-core/std"]

[dependencies]
limen-core = { workspace = true }
