[package]
name = "limen-node"
description = "Limen node implementations."
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
alloc = ["limen-core/alloc"]
std = ["alloc", "limen-core/std"]

[dependencies]
limen-core = { workspace = true }
