[package]
name = "limen-platform"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Platform adapters for Limen (initial: Linux/desktop)."
repository = "https://example.com/limen"

[features]
default = ["std"]
std = ["limen-core/std"]

[dependencies]
limen-core = { path = "../limen-core" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
