[package]
name = "limen-platform"
description = "Platform adapters for Limen."
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
alloc = ["limen-core/alloc"]
std = ["alloc", "limen-core/std"]

[dependencies]
limen-core = { workspace = true }
