[package]
name = "limen-processing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Processing nodes (normalize, window, threshold, classify, debounce) and split/join operators for Limen."
repository = "https://example.com/limen"

[features]
default = []
alloc = []
std = ["alloc", "limen-core/std"]

[dependencies]
limen-core = { path = "../limen-core" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
