[package]
name = "limen-runtime"
description = "Limen runtime implementations and schedulers."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
alloc = ["limen-core/alloc"]
std = ["alloc", "limen-core/std"]

[dependencies]
limen-core = { workspace = true }
