[package]
name = "limen-sensors"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Sensor SourceNodes for Limen (simulated, CSV)."
repository = "https://example.com/limen"

[features]
default = ["std"]
std = ["limen-core/std"]
csv = ["std"]

[dependencies]
limen-core = { path = "../limen-core" }
limen-processing = { path = "../limen-processing", default-features = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
